crates/tui/tests/snapshots/navigation__detail_composed.snap
---
source: crates/tui/tests/navigation.rs
expression: "app.snapshot(100, 23).unwrap()"
---
╭ nutsh ─────────────────────────────────────────────────────────────────╮
│Context:    -                                ⏎ drill        y detail    │       clusters 1  hosts 1
│PC:         127.0.0.1:PORT  pc.2024.3       S sort         w wide      │         vms 3  on/off 3/0
│Cluster:    <all>                           ←→ columns     ^r refresh   │           alerts ⚠ 2  ✖ 2
│Kind:       Compute & Storage › VMs         ^t every       ^x stop      │         tasks ▶ 4 running
│Count:      3                                a actions     ^c quit      │
╰────────────────────────────────────────────────────────────────────────╯        v0.2.0 · pc.2024.3
╭ nutsh ───────────────╮┌Virtual Machines · web-01─────────────────────────────────────────────────┐
│  ▸ Dashboard         ││IDENTITY ─────────────────────────────────────────────────────────────────│
│  ▾ Compute & Storage ││              Name web-01                                                 │
│      Overview        ││              UUID 3d0c4a2e-1b8f-4c1a-9e2f-000000000001                   │
│    • VMs [3]         ││       Description frontend                                               │
│      ESXi VMs        ││           Project -                                                      │
│      Templates       ││             Owner -                                                      │
│      Images          ││       Cloned from -                                                      │
│      OVAs            ││        Categories -                                                      │
│      VM Profiles     ││STATE ────────────────────────────────────────────────────────────────────│
│      Guest Customizat││             Power ON                                                     │
│      Storage Containe││          Agent VM ✗                                                      │
│      Volume Groups   ││   Live migratable -                                                      │
╰───────────────── ↓31 ╯└──────────────────────────────────────────────────────────────────────────┘
 j/k:scroll  g/G:top/bottom  a:actions  w:watch  Y:yaml  J:json  esc:back
[meter]          ● live
