crates/tui/tests/snapshots/navigation__detail_yaml.snap
---
source: crates/tui/tests/navigation.rs
assertion_line: 175
expression: "app.snapshot(100, 23).unwrap()"
---
╭ nutsh ─────────────────────────────────────────────────────────────────╮
│Context:    -                                ⏎ drill        y detail    │       clusters 1  hosts 1
│PC:         127.0.0.1:PORT  pc.2024.3       S sort         w wide      │         vms 3  on/off 3/0
│Cluster:    <all>                           ←→ columns     ^r refresh   │           alerts ⚠ 2  ✖ 2
│Kind:       Compute & Storage › VMs         ^t every       ^x stop      │         tasks ▶ 4 running
│Count:      3                                a actions     ^c quit      │
╰────────────────────────────────────────────────────────────────────────╯  v0.0.2-beta2 · pc.2024.3
╭ nutsh ───────────────╮┌Virtual Machines · web-01─────────────────────────────────────────────────┐
│  ▸ Dashboard         ││$objectType: vmm.v4.r0.b1.ahv.config.Vm                                   │
│  ▾ Compute & Storage ││extId: 3d0c4a2e-1b8f-4c1a-9e2f-000000000001                               │
│      Overview        ││name: web-01                                                              │
│    • VMs [3]         ││description: frontend                                                     │
│      ESXi VMs        ││createTime: 2026-05-01T10:00:00Z                                          │
│      Templates       ││updateTime: 2026-09-01T08:30:00Z                                          │
│      Images          ││numSockets: 2                                                             │
│      OVAs            ││numCoresPerSocket: 2                                                      │
│      VM Profiles     ││numThreadsPerCore: 1                                                      │
│      Guest Customizat││memorySizeBytes: 8589934592                                               │
│      Storage Containe││powerState: "ON"                                                          │
│      Volume Groups   ││machineType: PC                                                           │
╰───────────────── ↓31 ╯└──────────────────────────────────────────────────────────────────────────┘
 j/k:scroll  g/G:top/bottom  a:actions  w:watch  Y:yaml  J:json  esc:back
[meter]          ● live
