crates/tui/tests/snapshots/navigation__palette_scrolled.snap
---
source: crates/tui/tests/navigation.rs
expression: "app.snapshot(120, 21).unwrap()"
---
╭ nutsh ─────────────────────────────────────────────────────────────────────────────────────╮
│Context:    -                                                    ⏎ drill        y detail    │       clusters 1  hosts 1
│PC:         127.0.0.1:PORT  pc.2024.3                           S sort         w wide      │         vms 3  on/off 3/0
│Cluster:    <all>                                               ←→ columns     ^r refresh   │           alerts ⚠ 2  ✖ 2
│Kind:       Compute & Storage › VMs                             ^t every       ^x stop      │         tasks ▶ 4 running
│Count:      3                                                    a actions     ^c quit      │
╰────────────────────────────────────────────────────────────────────────────────────────────╯        v0.2.0 · pc.2024.3
╭ nutsh ───────────────╮╭ Virtual Machines [3] ────────────────────────────────────────────────────────────────────────╮
│  ▸ Dashboard         ││╭ kinds & commands (⇥ complete · ↑↓ · ⏎)  ↑5 ╮R  CLUSTER      HOST        IP            MEM   │
│  ▾ Compute & Storage │││  VPC Virtual Switch Mappin …alSwitchMapping│   lab-cluster  ahv-node-1  203.0.113.11  8 GiB │
│      Overview        │││  VPN Connections           …g.VpnConnection│   lab-cluster  -           -             4 GiB │
│    • VMs [3]         │││  Vulnerabilities           …t.Vulnerability│   lab-cluster  ahv-node-1  -             32 GiB│
│      ESXi VMs        │││  Volume Groups             …fig.VolumeGroup│                                                │
│      Templates       │││  Virtual Machines          …m.ahv.config.Vm│                                                │
│      Images          │││  VM Guest Customization Pr …mizationProfile│                                                │
│      OVAs            │││  VM Profiles               …onfig.VmProfile│                                                │
│      VM Profiles     │││▌ VM Recovery Points        …VmRecoveryPoint│                                                │
│      Guest Customizat││╰─────────────────────────────────────── ↓26 ╯                                                │
╰───────────────── ↓33 ╯╰──────────────────────────────────────────────────────────────────────────────────────────────╯
:v█m-recovery-point
[meter]          ● live
