crates/tui/tests/snapshots/navigation__palette_vm.snap
---
source: crates/tui/tests/navigation.rs
expression: "app.snapshot(120, 21).unwrap()"
---
╭ nutsh ─────────────────────────────────────────────────────────────────────────────────────╮
│Context:    -                                                    ⏎ drill        y detail    │       clusters 1  hosts 1
│PC:         127.0.0.1:PORT  pc.2024.3                           S sort         w wide      │         vms 3  on/off 3/0
│Cluster:    <all>                                               ←→ columns     ^r refresh   │           alerts ⚠ 2  ✖ 2
│Kind:       Compute & Storage › VMs                             ^t every       ^x stop      │         tasks ▶ 4 running
│Count:      3                                                    a actions     ^c quit      │
╰────────────────────────────────────────────────────────────────────────────────────────────╯        v0.2.0 · pc.2024.3
╭ nutsh ───────────────╮╭ Virtual Machines [3] ────────────────────────────────────────────────────────────────────────╮
│  ▸ Dashboard         ││╭ kinds & commands (⇥ complete · ↑↓ · ⏎) ────╮R  CLUSTER      HOST        IP            MEM   │
│  ▾ Compute & Storage │││▌ Virtual Machines          …m.ahv.config.Vm│   lab-cluster  ahv-node-1  203.0.113.11  8 GiB │
│      Overview        │││  ESXi Virtual Machines     ….esxi.config.Vm│   lab-cluster  -           -             4 GiB │
│    • VMs [3]         │││  VM Stats                 needs a parameter│   lab-cluster  ahv-node-1  -             32 GiB│
│      ESXi VMs        │││  VM Stats                 needs a parameter│                                                │
│      Templates       │││  VM Guest Customization Pr …mizationProfile│                                                │
│      Images          │││  VM Profiles               …onfig.VmProfile│                                                │
│      OVAs            │││  VM Recovery Points        …VmRecoveryPoint│                                                │
│      VM Profiles     │││  VM Anti Affinity Policies …iAffinityPolicy│                                                │
│      Guest Customizat││╰─────────────────────────────────────── ↓22 ╯                                                │
╰───────────────── ↓33 ╯╰──────────────────────────────────────────────────────────────────────────────────────────────╯
:vm█
[meter]          ● live
