crates/tui/tests/snapshots/navigation__picker_scrolled.snap
---
source: crates/tui/tests/navigation.rs
expression: "app.snapshot(120, 23).unwrap()"
---
╭ nutsh ─────────────────────────────────────────────────────────────────────────────────────╮
│Context:    -                                                    ⏎ drill        y detail    │       clusters 1  hosts 1
│PC:         127.0.0.1:PORT  pc.2024.3                           S sort         w wide      │         vms 3  on/off 3/0
│Cluster:    <all>                                               ←→ columns     ^r refresh   │           alerts ⚠ 2  ✖ 2
│Kind:       Hardware › Clusters                                 ^t every       ^x stop      │         tasks ▶ 4 running
│Count:      1                             ╭ on Clusters lab-cluster · 8/25 ─────────────────── ↑4 ╮
╰──────────────────────────────────────────│  Data Stores                          …onfig.DataStore│.2-beta1 · pc.2024.3
╭ nutsh ────────── ↑14 ╮╭ Clusters [1] ────│  Hosts                                …nfig.Host~hosts│───────────────────╮
│      Catalog Items   ││  NAME            │  IP Pools                             …t.config.IpPool│    EXTERNAL IP    │
│  ▸ Network & Security││▌ lab-cluster     │  Network Segments                     ….NetworkSegment│    203.0.113.5    │
│  ▸ Data Protection   ││                  │  Physical GPU Profiles                …sicalGpuProfile│                   │
│  ▾ Hardware          ││                  │  Rackable Units                       …ig.RackableUnit│                   │
│      Overview        ││                  │  Rsyslog Servers                      …g.RsyslogServer│                   │
│    • Clusters [1]    ││                  │▌ Virtual GPU Profiles                 …rtualGpuProfile│                   │
│      Hosts           ││                  ╰────────────────────────────────────────────────── ↓13 ╯                   │
│      Disks           ││                                                                                              │
│      Host NICs       ││                                                                                              │
│      NIC Profiles    ││                                                                                              │
│      Physical GPUs   ││                                                                                              │
│      Virtual GPUs    ││                                                                                              │
╰───────────────── ↓26 ╯╰──────────────────────────────────────────────────────────────────────────────────────────────╯
 type to filter  enter open or run  esc close
[meter]          ● live
