crates/tui/tests/snapshots/navigation__vm_disks.snap
---
source: crates/tui/tests/navigation.rs
expression: "app.snapshot(120, 19).unwrap()"
---
╭ nutsh ─────────────────────────────────────────────────────────────────────────────────────╮
│Context:    -                                                    ⏎ drill        y detail    │       clusters 1  hosts 1
│PC:         127.0.0.1:PORT  pc.2024.3                           S sort         w wide      │         vms 3  on/off 3/0
│Cluster:    <all>                                               ←→ columns     ^r refresh   │           alerts ⚠ 2  ✖ 2
│Kind:       Compute & Storage › VMs › web-01 › Disks            ^t every       ^x stop      │         tasks ▶ 4 running
│Count:      2                                                    a actions     ^c quit      │
╰────────────────────────────────────────────────────────────────────────────────────────────╯  v0.0.2-beta1 · pc.2024.3
╭ nutsh ───────────────╮╭ Disks [2] ───────────────────────────────────────────────────────────────────────────────────╮
│  ▸ Dashboard         ││  BUS                                                 INDEX         SIZE     CONTAINER        │
│  ▾ Compute & Storage ││▌ SCSI                                                0             50 GiB   default-container│
│      Overview        ││  SCSI                                                1             200 GiB  default-container│
│    • VMs [3]         ││                                                                                              │
│      ESXi VMs        ││                                                                                              │
│      Templates       ││                                                                                              │
│      Images          ││                                                                                              │
│      OVAs            ││                                                                                              │
╰───────────────── ↓35 ╯╰──────────────────────────────────────────────────────────────────────────────────────────────╯
 :palette  ^b:menu  ⇥:focus  /:filter  a:actions  ⏎:drill  esc:back  ?:help
[meter]          ● live
